# swiss-electricity-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  pyproject.toml  server.json  tool-definitions.lock.json
.github/: dependabot.yml
.github/workflows/: publish.yml  secret-scan.yml  test.yml
audits/: tracker.csv
audits/2026-06-03T175129-Z-swiss-electricity-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-06-03T175129-Z-swiss-electricity-mcp/findings/: ARCH-003-not-found-anti-pattern-heuristiken-statt.md  ARCH-004-inversion-of-control-transport-agnostisc.md  ARCH-005-keine-hardcoded-secrets-env-vars-secret.md  ARCH-007-capability-aggregation-composability-int.md  ARCH-008-drei-primitive-nutzen-tools-resources-un.md  ARCH-009-tool-annotations-readonlyhint-destructiv.md  ARCH-011-standardisierte-repo-struktur-src-layout.md  ARCH-012-protocolversion-pinning-changelog-sdk-up.md  OBS-001-protocol-vs-execution-errors-korrekte-tr.md  OBS-002-mask-error-details-keine-stacktraces-sql.md  OBS-003-structured-logging-mit-rfc-5424-severity.md  OBS-006-opentelemetry-distributed-tracing-pro-to.md  OPS-001-test-strategie-unit-tests-mocked-live-te.md  OPS-002-doku-standard-bilingualer-readme-ascii-d.md  OPS-003-phasenarchitektur-read-only-first-dann-w.md  SCALE-004-containerization-mit-multi-stage-builds.md  SDK-001-fastmcp-lifespan-via-asynccontextmanager.md  SDK-003-context-injection-f-r-progress-reports-u.md  (+10 more)
audits/2026-06-03T191138-Z-swiss-electricity-mcp/: audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
docs/: network-egress.md  roadmap.md  security-posture.md
src/swiss_electricity_mcp/: __init__.py  __main__.py  api_client.py  config.py  models.py  observability.py  server.py  tool_snapshot.py
tests/: test_integration.py  test_live.py  test_observability.py  test_search_and_compare.py  test_security.py  test_server.py  test_unit.py
(+2 files in other folders)
